# DOTs-SOCP

./: .gitignore  Copyright.txt  Makefile  README.md  demo.py  pyproject.toml  requirements_linux.txt  requirements_windows.txt
dot_surface_socp/: __init__.py  cli.py  interface.py
dot_surface_socp/config/: __init__.py  logging_config.toml  path_config.toml
dot_surface_socp/data/: .gitattributes  .gitignore  __init__.py  load_example.py  util.py
dot_surface_socp/data/meshes/: airplane_62.off  armadillo.off  audi.off  bunny.off  eight.off  face_vector_field_319.off  hand_3k.off  hills.off  knots_3.off  knots_5.off  plane.off  plane.py  punctured_ball.off  refined_airplane_62.off  refined_armadillo.off  refined_bunny.off  refined_face_vector_field_319.off  refined_hand_3k.off  refined_punctured_ball.off  refined_sphere_puncture.off  ring.off  robot.off  sphere_puncture.off  square_regular_100.off
dot_surface_socp/data/settings/: __init__.py  airplane.py  armadillo.py  audi.py  bunny.py  default.py  eight.py  face.py  hand.py  hills.py  knots_3.py  knots_5.py  plane.py  punctured_ball.py  refined_airplane.py  refined_armadillo.py  refined_bunny.py  refined_face.py  refined_hand.py  (+4 more)
dot_surface_socp/socp/: __init__.py  data_preprocessing.py  solver_decorator.py  solver_socp.py
dot_surface_socp/utils/: admm_tools.py  condition_validator.py  condition_validator_wrapper.py  evaluate_solution.py  file_process.py  laplacian_inverse_socp.py  show.py  surface_pre_computations_socp.py  type.py  util.py
replication/: __init__.py  log2table.py  main.py  main_versus_exact.py
(+16 files in other folders)
