[project]
name = "dot-socp-surface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9,<3.13"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib==3.9.2",
    "numexpr==2.10.1",
    "numpy==2.0.2",
    "pandas==2.2.3",
    "pymeshlab>=2023.12.post3",
    "pyvista>=0.44.2",
    "scipy==1.14.1",
    "tqdm==4.66.5",
    "trimesh>=4.6.4",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
windows = [
    "imageio[ffmpeg]>=2.37.0",
]

linux = [
    "kaleido==0.2.1",
]
